--- a/app/src/main/res/layout/recycler_data.xml
+++ b/app/src/main/res/layout/recycler_data.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="MyData"
+            type="com.example.recyclerview.RecyclerData" />
+    </data>
+
+<LinearLayout
+
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:orientation="horizontal"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:orientation="horizontal">
     <TextView
         android:id="@+id/num"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent"
+        android:text='@{MyData.number}'
         tools:text="1"
         android:textColor="#000"
         android:textSize="20sp"
@@ -19,10 +29,12 @@
         android:layout_width="0dp"
         android:layout_weight="5"
         android:layout_height="match_parent"
-        tools:text="This is RecyclerView"
+        android:text='@{MyData.str}'
+        tools:text="hello this is Recycelr View"
         android:textColor="#000"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginTop="5dp"/>
 
 </LinearLayout>
+</layout>
