--- a/app/src/main/res/layout/youtube.xml
+++ b/app/src/main/res/layout/youtube.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="youtubeData"
+            type="com.example.recyclerview.layout_2.YoutubeData" />
+    </data>
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="120dp">
-
     <ImageView
         android:id="@+id/image"
         android:layout_width="110dp"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:background="@color/colorAccent"
-        android:src="@drawable/ic_launcher_background" />
+        android:src='@{youtubeData.img}' />
 
     <TextView
         android:id="@+id/head"
@@ -21,10 +26,9 @@
         android:layout_toRightOf="@id/image"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="Head" />
+        tools:text='@{youtubeData.head}' />
 
     <TextView
-
         android:id="@+id/body"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +38,7 @@
         android:layout_toRightOf="@id/image"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="body" />
+        tools:text='@{youtubeData.body}' />
 
 </RelativeLayout>
+</layout>
