--- a/app/src/main/res/layout/newslayout.xml
+++ b/app/src/main/res/layout/newslayout.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     android:paddingBottom="10dp"
     android:layout_height="198dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="@drawable/ripple"
     android:elevation="2dp">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/newImage"
         android:layout_width="match_parent"
         android:layout_height="120dp"
+        app:shapeAppearance="@style/round_img"
         android:src="@drawable/ic_launcher_background"
         android:scaleType="fitXY"/>
 
